[package]
name = "payment-engine"
version = "0.1.0"
edition = "2021"
description = "A simple toy transaction engine for processing payments"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["lib"]
name = "payment_engine"

[[bin]]
name = "payment-engine"
path = "src/cli/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5.54", features = ["derive"] }

# CSV parsing
csv = "1.4.0"

# Typed error handling useful for libraries
thiserror = "2.0.17"

# Decimal operations
rust_decimal = "1.39.0"

# De/serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# Error handling for binaries
anyhow = "1.0"

[dev-dependencies]
# Decimal macros for testing
rust_decimal_macros = "1.39.0"

[lints.rust]
unsafe_code = "forbid"

# Run cargo clippy --all-targets --all-features -- -D clippy::all
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
enum_glob_use = "warn"
